objects/Lead.object
<CustomObject>
    <fields>
        <fullName>dr_disqualified_reason__c</fullName>
        <description>For Lead Status</description>
        <inlineHelpText>Choose from a picklist s reason why the lead status was set to &quot;disqualify&quot;.</inlineHelpText>
        <label>Rejected/Disqualified Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Junk - No email or name or company name or spam</fullName>
                </value>
                <value>
                    <fullName>Not a Sales Lead</fullName>
                </value>
                <value>
                    <fullName>Non-target – Geo Vertical, or job-level</fullName>
                </value>
                <value>
                    <fullName>Moved to another company</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_external_record_id__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>External Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_date__c</fullName>
        <label>First Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_date_contact__c</fullName>
        <label>First Campaign Date (Contact)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (First Campaign)</relationshipLabel>
        <relationshipName>first_campaign_leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_first_campaign_tracking_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Campaign (Contact)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lead to Contact (First Campaign (Contact))</relationshipLabel>
        <relationshipName>first_campaign_lead_to_contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_follow_up_date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_funnel__c</fullName>
        <description>For funnel grid, important field for lead assignment</description>
        <inlineHelpText>Defines the type of lead. Either MRL (raw lead), MVL (validated lead), MTL (targeted lead) or MQL (qualify lead). MRL &amp; MVL are mostly only relevant for Marketing (still need nurturing), MTL &amp; MQL can be relevant for Sales.</inlineHelpText>
        <label>Funnel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRL</fullName>
                </value>
                <value>
                    <fullName>MVL</fullName>
                </value>
                <value>
                    <fullName>MTL</fullName>
                </value>
                <value>
                    <fullName>MQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_last_campaign_date__c</fullName>
        <label>Last Campaign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_date_contact__c</fullName>
        <label>Last Campaign Date (Contact)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Last Campaign)</relationshipLabel>
        <relationshipName>last_campaign_leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_last_campaign_tracking_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Campaign (Contact)</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lead to Contact (Last Campaign (Contact))</relationshipLabel>
        <relationshipName>last_campaign_lead_to_contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dr_last_engagement_date__c</fullName>
        <description>For knowing when a lead engaged last</description>
        <label>Last Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_lead_status_admin__c</fullName>
        <description>Defines the status a lead is currently in. 
The purpose of this custom Lead Status (Admin) field is to transfer the lead status over to the Contact Status field, to allow sales to convert leads to contacts but to preserve the Lead Status</description>
        <formula>TEXT(Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Status (Admin)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_linkedin_url__c</fullName>
        <description>For displaying Linkedin URL for a person</description>
        <label>Linkedin URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>dr_might_be_junk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Junk</description>
        <label>Might Be Junk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_might_be_spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Spam</description>
        <label>Might Be Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_mql__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MQL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mql_utc__c</fullName>
        <description>Intended to get the system time of the Lead table</description>
        <formula>text(dr_mql__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MQL-UTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_mrl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MRL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mtl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MTL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_mvl__c</fullName>
        <description>For funnel grid reporting</description>
        <label>MVL</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_not_now_reasons__c</fullName>
        <description>For Lead Status</description>
        <inlineHelpText>Choose from a picklist s reason why the lead status was set to &quot;not now&quot;.</inlineHelpText>
        <label>Not Now Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tried to Contact - Will follow up later</fullName>
                </value>
                <value>
                    <fullName>Budget not available now - Will follow up later</fullName>
                </value>
                <value>
                    <fullName>Tried to Contact - Not following up, needs nurture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dr_number_of_campaigns__c</fullName>
        <label>Number of Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dr_opted_in_to_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted-in to Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_quote_request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For flagging Quote Request</description>
        <label>Quote Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_talk_to_sales_now__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Talk to Sales check box</description>
        <label>Talk to Sales Now</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dr_talk_to_us_comments__c</fullName>
        <description>For comments entered on Talk to Sales form</description>
        <label>Talk to Us Comments</label>
        <length>1100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dr_targeted_account__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Targeted - Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_targeted_person__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Targeted - Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_tracking_content__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_inbound_url__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Inbound URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_referring_url__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - Referring URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_campaign__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_content__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_medium__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_source__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_tracking_utm_term__c</fullName>
        <description>For Marketing ROI Tracking</description>
        <label>Tracking - UTM Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dr_valid_account__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Valid - Account</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_valid_person__c</fullName>
        <description>For funnel grid reporting</description>
        <label>Valid - Person</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dr_website_domain__c</fullName>
        <description>For data management</description>
        <label>Website Domain</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Department__c</fullName>
        <description>Department</description>
        <label>Department</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast3Months__c</fullName>
        <description>Engagement minutes in the last 3 months</description>
        <label>Engagement Minutes (3 mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__EngagementMinutesLast7Days__c</fullName>
        <description>Engagement minutes in the last 7 days</description>
        <label>Engagement Minutes (7 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__FirstEngagementDate__c</fullName>
        <description>First engagement date</description>
        <label>First Engagement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Annual_Revenue__c</fullName>
        <description>Matched Account Annual Revenue From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.AnnualRevenue</formula>
        <label>Matched Account Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Employees__c</fullName>
        <description>Matched Account Number of Employees From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.NumberOfEmployees</formula>
        <label>Matched Account Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_EngageMinsLast3Months__c</fullName>
        <description>Matched Account Engagement minutes in the last 3 months</description>
        <formula>engagio__Matched_Account__r.engagio__EngagementMinutesLast3Months__c</formula>
        <label>Matched Account Engagement Mins (3 mo.)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_EngageMinsLast7Days__c</fullName>
        <description>Matched Account Engagement minutes in the last 7 days</description>
        <formula>engagio__Matched_Account__r.engagio__EngagementMinutesLast7Days__c</formula>
        <label>Matched Account Engagement Mins (7 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Engagio_Status__c</fullName>
        <description>Matched Account Engagio Status From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.engagio__Status__c</formula>
        <label>Matched Account Engagio Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_HQ_State__c</fullName>
        <description>Matched Account HQ State From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.BillingState</formula>
        <label>Matched Account HQ State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Industry__c</fullName>
        <description>Matched Account Industry From Engagio Lead to Account Matching</description>
        <formula>TEXT(engagio__Matched_Account__r.Industry)</formula>
        <label>Matched Account Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Name__c</fullName>
        <description>Matched Account Name From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.Name</formula>
        <label>Matched Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Owner_Name__c</fullName>
        <description>Matched Account Owner Name From Engagio Lead to Account Matching</description>
        <formula>engagio__Matched_Account__r.Owner.FirstName &amp; &quot; &quot; &amp; engagio__Matched_Account__r.Owner.LastName</formula>
        <label>Matched Account Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account_Type__c</fullName>
        <description>Matched Account Type From Engagio Lead to Account Matching</description>
        <formula>TEXT(engagio__Matched_Account__r.Type)</formula>
        <label>Matched Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>engagio__Matched_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Matched Account From Engagio Lead to Account Matching</description>
        <label>Matched Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagio Matched Leads</relationshipLabel>
        <relationshipName>Matched_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>engagio__Role__c</fullName>
        <description>Role</description>
        <label>Role</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>Unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>D&amp;B ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>int_advancements_in_test_automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Advancements in Test Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_advancements_in_test_automation_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Advancements in Test Automation_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_bi_data_warehouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>BI/Data Warehouse Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_bi_data_warehouse_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>BI/Data Warehouse Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_cont_testing_for_agiledevops_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Continuous Testing for Agile/DevOps_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_continuous_testing_for_agiledevops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Continuous Testing for Agile/DevOps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_exploratory_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Exploratory Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_exploratory_testing_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Exploratory Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_load_performance_testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Load/Performance Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_load_performance_testing_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Load/Performance Testing_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>int_sap_packaged_apps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>SAP/Packaged Apps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>int_sap_packaged_apps_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>SAP/Packaged Apps_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>isconverted__c</fullName>
        <formula>IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsConverted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isusedinworkflow__c</fullName>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isusedinworkflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>job_role__c</fullName>
        <description>For lead capture forms</description>
        <inlineHelpText>A picklist of values for a general categorization of job roles. Used for targeted Marketing campaigns.</inlineHelpText>
        <label>Job Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>QA Staff</fullName>
                </value>
                <value>
                    <fullName>QA Manager / Team Lead</fullName>
                </value>
                <value>
                    <fullName>QA Director</fullName>
                </value>
                <value>
                    <fullName>QA VP</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Developer Manager / Team Lead</fullName>
                </value>
                <value>
                    <fullName>Development Director</fullName>
                </value>
                <value>
                    <fullName>Development VP</fullName>
                </value>
                <value>
                    <fullName>IT / System Administrator</fullName>
                </value>
                <value>
                    <fullName>Project Manager</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program_Id__c</fullName>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Acquisition_Program__c</fullName>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Engine__c</fullName>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Info__c</fullName>
        <defaultValue>&quot;Lead&quot;</defaultValue>
        <label>Original Source Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mkto2__Original_Source_Type__c</fullName>
        <defaultValue>&quot;salesforce.com&quot;</defaultValue>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Person Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Allow_Marekting_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New registrant has to actively check this field for consent - will get Email Opt-In that way</description>
        <label>Allow Marekting Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_Privacy_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New registrant has to actively check this field for consent</description>
        <label>Privacy Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_blog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Blog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_blog_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Blog_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_events_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Events_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_new_research_webinars__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>New Research &amp; Webinars</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_new_research_webinars_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>New Research &amp; Webinars_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_special_announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Special Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_special_announcements_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Special Announcements_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_support_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Support updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_support_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Support updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_technical_product_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fields for the Subscription center</description>
        <label>Technical product updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_technical_product_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Technical product updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_training_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sc_training_updates_date__c</fullName>
        <description>Fields for the Subscription center</description>
        <label>Training updates_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>total_demographic_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Total Demographic Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_score__c</fullName>
        <description>For Lead Scoring</description>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>